# nefarium-classic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  docker-publish.yml
examples/flows/: amazon.json  discord.json  tiktok.json  twitter.json
src/nefarium/: __init__.py  __main__.py  app_factory.py  cli.py  db.py  helpers.py  proxy.py  routes.py  types.py
src/nefarium/client/: __init__.py
src/nefarium/server/: __init__.py  __main__.py  app_factory.py  cli.py  db.py  filtering.py  proxy.py  routes.py
src/nefarium/server/assets/: flow_bson_schema.json  flow_json_schema.json
tests/: __init__.py  test_db.py  test_helpers.py
tests/unit/: test_db.py  test_filtering.py  test_helpers.py  test_proxy.py
