[tool.poetry]
name = "nefarium"
version = "0.1.0"
description = "nefarium provides an API similar to OAuth for websites that do not support it"
authors = ["Parker Wahle <regulad@regulad.xyz>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "nefarium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
authcaptureproxy = "^1.1.4"  # cannot be py.typed because of authcaptureproxy
motor = "^3.1.1"
pymongo = "^4.3.3"
motor-stubs = "^1.7.1"
httpx = "^0.23.3"
yarl = "^1.8.2"
dislog = "^2.0.0"  # cannot be py.typed because of dislog, maybe i should type it later
beautifulsoup4 = "^4.11.1"
types-beautifulsoup4 = "^4.11.6.4"
cssutils = "^2.6.0"  # cannot be py.typed because of cssutils
aiohttp-session = {extras = ["aioredis", "secure"], version = "^2.12.0"}
cryptography = "^39.0.0"
redis = {extras = ["hiredis"], version = "^4.4.2"}
types-redis = "^4.4.0.4"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.2"

[tool.poetry.scripts]
nefarium = "nefarium.server.cli:cli"
nefarium-start = "nefarium.server.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
