[tool.poetry]
name = "nefarium"
version = "0.1.0"
description = "nefarium provides an API similar to OAuth for websites that do not support it"
authors = ["Parker Wahle <regulad@regulad.xyz>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "nefarium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
authcaptureproxy = { git = "https://github.com/nefarium/auth_capture_proxy.git", branch = "main" }
motor = "^3.1.1"
pymongo = "^4.3.3"
httpx = "^0.23.3"
yarl = "^1.8.2"
dislog = "^2.1.0"
beautifulsoup4 = "^4.11.1"
cssutils = "^2.6.0"  # cannot be py.typed because of cssutils
aiohttp-session = {extras = ["aioredis", "secure"], version = "^2.12.0"}
cryptography = "^39.0.0"
redis = {extras = ["hiredis"], version = "^4.4.2"}
jsonschema = "^4.17.3"
tldextract = "^3.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^4.4.4"
pre-commit = "^3.0.4"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
tox-gh-actions = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-asyncio = "^0.20.3"
pytest-motor = "^0.3.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.991"
types-redis = "^4.4.0.6"
types-jsonschema = "^4.17.0.3"
types-beautifulsoup4 = "^4.11.6.5"
motor-stubs = "^1.7.1"

[tool.poetry.scripts]
nefarium = "nefarium.server.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
